<resources>
    <string name="app_name">生徒管理システム</string>
    <string name="insertStudent">生徒情報入力</string>
    <string name="selectStudent">生徒情報一覧</string>
    <string name="updateStudent">生徒情報更新</string>
    <string name="insertGrades">成績入力</string>
    <string name="selectGrades">成績一覧</string>
    <string name="newInput">新規入力</string>
    <string name="newInputGrades">成績入力</string>
    <string name="grades">成績</string>
    <string name="back">戻る</string>
    <string name="save">保存</string>
    <string name="date">登録日</string>
    <string name="name">氏名</string>
    <string name="ruby">ふりがな</string>
    <string name="birthday">生年月日</string>
    <string name="code">〒</string>
    <string name="address">住所</string>
    <string name="selectAddress">住所検索</string>
    <string name="contact">連絡先</string>
    <string name="mail">e-mail</string>
    <string name="sex">性別</string>
    <string name="school">学校名</string>
    <string name="year">学年</string>
    <string name="notFindAddress">住所が見つかりません</string>
    <string name="student">生徒名</string>
    <string name="testDate">試験日</string>
    <string name="total5">5教科合計</string>
    <string name="total9">9教科合計</string>
    <string name="testName">試験名</string>
    <string name="japanese">国語</string>
    <string name="math">数学</string>
    <string name="science">理科</string>
    <string name="society">社会</string>
    <string name="english">英語</string>
    <string name="music">音楽</string>
    <string name="physical">保体</string>
    <string name="art">美術</string>
    <string name="techHome">技家</string>
    <string name="notSave">保存出来ませんでした</string>
    <string name="onSave">保存しました</string>
    <string name="onDelete">削除しました</string>
    <string name="notDelete">削除出来ませんでした</string>
    <string name="contentNotSaved">内容は保存されません</string>
    <string name="onUpdate">更新しました</string>
    <string name="notUpdate">更新出来ませんでした</string>
    <string name="isDelete">削除してもよろしいですか？</string>
    <string name="ok">OK</string>
    <string name="mustInput">※要入力</string>
    <string name="address1">アドレス１</string>
    <string name="address2">アドレス２</string>
    <string name="writeName">名前を入力してください</string>
    <string name="writeTestInfo">テスト日、テスト名を入力してください</string>
    <string name="update">更新</string>
    <string name="delete">削除</string>
    <string-array name="yearList">
        <item>小1</item>
        <item>小2</item>
        <item>小3</item>
        <item>小4</item>
        <item>小5</item>
        <item>小6</item>
        <item>中1</item>
        <item>中2</item>
        <item>中3</item>
        <item>高1</item>
        <item>高2</item>
        <item>高3</item>
    </string-array>
    <string-array name="sexList">
        <item>男</item>
        <item>女</item>
        <item>無回答</item>
    </string-array>
</resources>