<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2b2b2"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".UpdateStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/back"
            android:textSize="20sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="delete"
            android:text="@string/delete"
            android:textSize="20sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/updateStudent"
            android:textSize="36sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="update"
            android:text="@string/update"
            android:textSize="20sp"></TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:weightSum="11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="12sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:hint="@string/mustInput"
                android:textSize="12sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/ruby"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/ruby"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="12sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/birthday"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/birthday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:background="@color/white"
                android:hint="1990/04/01"
                android:paddingLeft="20dp"
                android:textSize="12sp"></EditText>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/sex"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/sex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="12sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/address"
                android:textSize="12sp"></TextView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/code"
                        android:textSize="16sp"></TextView>

                    <EditText
                        android:id="@+id/code"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:background="@color/white"
                        android:hint="1234567"
                        android:textSize="12sp"></EditText>
                </LinearLayout>

                <EditText
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:paddingLeft="20dp"
                    android:hint="@string/address1"
                    android:textSize="12sp"></EditText>

                <EditText
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:paddingLeft="20dp"
                    android:hint="@string/address2"
                    android:textSize="12sp"></EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/contact"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/contact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:hint="090-1234-5678"
                android:textSize="12sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/mail"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/mail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="12sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/school"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/school"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="12sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/year"
                android:textSize="12sp"></TextView>

            <EditText
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="12sp"></EditText>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>