<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2b2b2"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".InsertGradesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/back"
            android:textSize="20sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/newInputGrades"
            android:textSize="36sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/save"
            android:textSize="20sp"></TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:weightSum="11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/student"
                android:textSize="16sp"></TextView>

            <Spinner
                android:id="@+id/studentId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="16sp"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/testDate"
                android:textSize="16sp"></TextView>

            <EditText
                android:id="@+id/testDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="16sp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_2"
                android:gravity="center"
                android:text="@string/testName"
                android:textSize="16sp"></TextView>

            <EditText
                android:id="@+id/testName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:textSize="16sp"></EditText>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/english"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/math"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/japanese"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/science"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/society"
                    android:textSize="24sp"></TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <EditText
                    android:id="@+id/english"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

                <EditText
                    android:id="@+id/math"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

                <EditText
                    android:id="@+id/japanese"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

                <EditText
                    android:id="@+id/science"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

                <EditText
                    android:id="@+id/society"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/music"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/physical"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/techHome"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/button_2"
                    android:gravity="center"
                    android:text="@string/art"
                    android:textSize="24sp"></TextView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <EditText
                    android:id="@+id/music"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

                <EditText
                    android:id="@+id/physical"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

                <EditText
                    android:id="@+id/techHome"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

                <EditText
                    android:id="@+id/art"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="24sp"></EditText>

            </TableRow>

        </TableLayout>

    </LinearLayout>


</LinearLayout>